clap_derive/tests/ui/subcommand_and_flatten.stderr
error: subcommand, flatten and skip cannot be used together
  --> $DIR/subcommand_and_flatten.rs:17:24
   |
17 |     #[clap(subcommand, flatten)]
   |                        ^^^^^^^
